Added navigation bar
Hi, features add to the site
-Navigation Bar (new)

--- a/Index.html
+++ b/Index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Style.css">
 
-    <link rel="stylesheet" href="EstiloCSS.css">
-    <title>IEEE - IFF Macaé</title>
+    <head>
+        <header>
+            <nav class="navigation">
+                <ul class="list">
+                    <li class="aba"><a href="">IEEE</a></li>
+                    <li class="aba"><a href="">Sobre Nos</a></li>
+                    <li class="aba"><a href="">Projetos</a></li>
+                    <li class="aba"><a href="">Membros</a></li>
+                </ul>
+            </nav>
 </head>
 <body>
-    <header>
-        <h1>SITE IEEE</h1>
+        <title>IEEE - IFF Macaé</title>
     </header>
 
     <section>
+                <h1>SITE IEEE</h1>
         <div class="TextoPrincipal">
             <p>
                 O Instituto de Engenheiros Eletricistas e Eletrônicos, de sigla IEEE (pronuncia-se I-3-É), é
