--- a/Index.html
+++ b/Index.html
@@ -1,45 +1,66 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Style.css">
-
+<html lang="en">
     <head>
-        <header>
-            <nav class="navigation">
-                <ul class="list">
-                    <li class="aba"><a href="">IEEE</a></li>
-                    <li class="aba"><a href="">Sobre Nos</a></li>
-                    <li class="aba"><a href="">Projetos</a></li>
-                    <li class="aba"><a href="">Membros</a></li>
+        <meta charset="UFT-8">
+        <meta name="viewport" content="width=device-width", initial-scale="1.0">
+        <link rel="stylesheet" href="style.css">
+        <title>Document</title>
+    </head>
+    <body>
+            <nav>
+                <ul>
+                    <li><a href="#">Quem somos?</a></li>
+                    <li><a href="#">Projetos</a></li>
+                    <li><a href="#">Membros</a></li>
+                    <li><a href="#">Processo Seletivo</a></li>
                 </ul>
             </nav>
-</head>
-<body>
-        <title>IEEE - IFF Macaé</title>
-    </header>
-
-    <section>
-                <h1>SITE IEEE</h1>
-        <div class="TextoPrincipal">
-            <p>
-                O Instituto de Engenheiros Eletricistas e Eletrônicos, de sigla IEEE (pronuncia-se I-3-É), é
-                a maior organização profissional do mundo. Sem fins lucrativos, foi fundada nos Estados Unidos
-                e dedica-se ao avanço da tecnologia em benefício da humanidade.
-            </p>
-            <p>
-                Advancing Technology for Humanity
-                IEEE and its members inspire a global community through highly-cited publications,
-                conferences, technology standards, and professional and educational activities.
-            </p>
-        </div>
-    </section>
-
-    <footer>
-        <p> &copy; IEEE IFF Macaé </p>
-    </footer>
-
-    <link rel="stylesheet" href="CodeBackend.js">
-</body>
+            <header class="header-wrapper">
+            <img class="img" src="img3.jpeg" alt="IEEE Macaé Logo">
+            <h1>IEEE</h1>
+            <h2>Instituto Federal Fluminense Campus Macaé</h2>
+            <div class="social-media">
+                <a href="">Instagram</a>
+                <a href="">Facebook</a>
+            </div>
+        </header>
+        <main class="container">
+            <div class="card-container">
+                <div class="card-text">
+                    Text
+                </div>
+                <div class="card">
+                    <div class="card-wrapper">
+                        <h2>GitHub</h2>
+                        <p>Veja meus projetos</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <div class="card-wrapper">
+                        <h2>Linkedin</h2>
+                        <p>Acompanhe minha carreira</p>
+                    </div>
+                </div>
+                <div class="card-text">
+                    Text
+                </div>
+            </div>
+            <div class="card-container">
+                <div class="card-text" id="Projetos">
+                    Text
+                </div>
+                <div class="card">
+                    <div class="card-wrapper">
+                        <h2>Instagram</h2>
+                        <p>Instagram</p>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <footer class="footer">
+            <img class="img2" src="img4.jpeg" alt="">
+        </footer>
+    </body>
 </html>
