--- a/Index.html
+++ b/Index.html
@@ -16,14 +16,19 @@
                 </ul>
             </nav>
             <header class="header-wrapper">
-            <img class="img" src="img3.jpeg" alt="IEEE Macaé Logo">
-            <h1>IEEE</h1>
-            <h2>Instituto Federal Fluminense Campus Macaé</h2>
-            <div class="social-media">
-                <a href="">Instagram</a>
-                <a href="">Facebook</a>
-            </div>
-        </header>
+                <div class="op">
+                    <div>
+                        <img class="img" src="img3.jpeg" alt="IEEE Macaé Logo">
+                    </div>
+                    <div class="social-media">
+                        <a href="">Instagram</a>
+                        <a href="">Facebook</a>
+                        <a href="">GitHub</a>
+                    </div>
+                </div>
+                <h1>IEEE</h1>
+                <h2>Instituto Federal Fluminense Campus Macaé</h2>
+            </header>
         <main class="container">
             <div class="card-container">
                 <div class="card-text">
