--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
             <header class="header-wrapper">
                 <div class="op">
                     <div>
-                        <img class="img" src="img3.jpeg" alt="IEEE Macaé Logo">
+                        <img class="img" src="IconIEEE.png" alt="IEEE Macaé Logo">
                     </div>
                     <div class="social-media">
                         <a href="">Instagram</a>
@@ -27,7 +27,7 @@
                     </div>
                 </div>
                 <h1>IEEE</h1>
-                <h2>Instituto Federal Fluminense Campus Macaé</h2>
+                <h2>Instituto Federal Fluminense Campus Macae</h2>
             </header>
         <main class="container">
             <div class="card-container">
