Mudança de cores e formatação

--- a/Index.html
+++ b/Index.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="MiniCards">
                         <div class="card">
-                        <img class="cardimg" src="" alt="">
+                        <img class="cardimg" src="img4.jpeg" alt="">
                         <div class="ProjectTittle">
                             SiteIEEE
                         </div>
