--- a/index.html
+++ b/index.html
@@ -81,6 +81,117 @@
                 </ul>
             </div>
         </div>
+        <div class="card-container" id="Eventos">
+            <div class="sp">
+                <div class="Card-tittle">
+                    Eventos
+                </div>
+                <ul class="cards">
+                    <li class="card">
+                        <img class="card-img" src="" alt="">
+                        <div class="card-tittle">
+                            SECAI IX
+                        </div>
+                        <div class="card-content">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti minus accusamus officiis,
+                            rerum architecto deleniti neque facilis dolorum ullam aspernatur, nostrum esse commodi nulla
+                            earum, delectus nobis unde natus odit.
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi pariatur officia
+                            cupiditate enim natus iure exercitationem libero, laborum delectus ea consequatur, adipisci
+                            quia aspernatur eius dignissimos tenetur, in vitae non.
+                        </div>
+                        <div class="card-botton-style2">
+                            <div class="link">
+                                <a href="">Link</a>
+                            </div>
+                    </li>
+                    <li class="card">
+                        <img class="card-img" src="" alt="">
+                        <div class="card-tittle">
+                            SECAI IX
+                        </div>
+                        <div class="card-content">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti minus accusamus officiis,
+                            rerum architecto deleniti neque facilis dolorum ullam aspernatur, nostrum esse commodi nulla
+                            earum, delectus nobis unde natus odit.
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi pariatur officia
+                            cupiditate enim natus iure exercitationem libero, laborum delectus ea consequatur, adipisci
+                            quia aspernatur eius dignissimos tenetur, in vitae non.
+                        </div>
+                        <div class="card-botton-style2">
+                            <div class="link">
+                                <a href="">Link</a>
+                            </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="card-container" id="Membros">
+            <div class="sp">
+                <div class="Card-tittle">
+                    Membros
+                </div>
+                <ul class="cards-member">
+                    <li class="card-member">
+                        <img class="card-img-member" src="" alt="">
+                        <div class="card-Member-name">
+                            Marina Texeira
+                        </div>
+                        <div class="cargo">
+                            Cargo: Diretora do ramo
+                        </div>
+                        <div class="card-content">
+                            Cuidado com o Stike.
+                        </div>
+                        <div class="card-botton-member">
+                            <div class="special">
+                                Administração, Calculo
+                            </div>
+                            <div class="link">
+                                <a href="">LinkIn</a>
+                            </div>
+                    </li>
+                    <li class="card-member">
+                        <img class="card-img-member" src="" alt="">
+                        <div class="card-Member-name">
+                            Klauss Marchi
+                        </div>
+                        <div class="cargo">
+                            Cargo: Vice-Diretor do ramo
+                        </div>
+                        <div class="card-content">
+                            Eu Amo Pyton.
+                        </div>
+                        <div class="card-botton-member">
+                            <div class="special">
+                                Pyton, Pyton
+                            </div>
+                            <div class="link">
+                                <a href="">LinkIn</a>
+                            </div>
+                    </li>
+                    <li class="card-member">
+                        <img class="card-img-member" src="" alt="">
+                        <div class="card-Member-name">
+                            Nicolas Grisostolo
+                        </div>
+                        <div class="cargo">
+                            Cargo: Diretor do diretorio de robôtica
+                        </div>
+                        <div class="card-content">
+                            Por favor me dê strike.
+                        </div>
+                        <div class="card-botton-member">
+                            <div class="special">
+                                Programação, Eletrônica
+                            </div>
+                            <div class="link">
+                                <a href="">LinkIn</a>
+                            </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </main>
     <footer class="footer">
         <img class="img2" src="img4.jpeg" alt="">
