add Members-IMG directory

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 </div>
                 <ul class="cards-member">
                     <li class="card-member">
-                        <img class="card-img-member" src="" alt="">
+                        <img class="card-img-member" src="https://pps.whatsapp.net/v/t61.24694-24/290810731_1020487415322592_2904842586930223407_n.jpg?ccb=11-4&oh=01_AVyId4xp64fdiiALovwsvK4kfUGyKKqUUIfFWK7XfOG7ug&oe=633CBCB7" alt="">
                         <div class="card-Member-name">
                             Marina Texeira
                         </div>
@@ -152,7 +152,7 @@
                             </div>
                     </li>
                     <li class="card-member">
-                        <img class="card-img-member" src="" alt="">
+                        <img class="card-img-member" src="https://pps.whatsapp.net/v/t61.24694-24/138534517_121184246446828_8095574896086887482_n.jpg?ccb=11-4&oh=01_AVyATcrKytokz4KC7_YLAclioTBjgmheM85whtMgBJevww&oe=63406B8F" alt="">
                         <div class="card-Member-name">
                             Klauss Marchi
                         </div>
@@ -171,7 +171,7 @@
                             </div>
                     </li>
                     <li class="card-member">
-                        <img class="card-img-member" src="" alt="">
+                        <img class="card-img-member" src="https://pps.whatsapp.net/v/t61.24694-24/300557173_182183454272830_5035497876143889024_n.jpg?ccb=11-4&oh=01_AVxPBdwU-rzoqBMtgHjEN7DmPMwNP6uQUWmfRVm9_cOr3Q&oe=633FFB38" alt="">
                         <div class="card-Member-name">
                             Nicolas Grisostolo
                         </div>
@@ -184,6 +184,25 @@
                         <div class="card-botton-member">
                             <div class="special">
                                 Programação, Eletrônica
+                            </div>
+                            <div class="link">
+                                <a href="">LinkIn</a>
+                            </div>
+                    </li>
+                    <li class="card-member">
+                        <img class="card-img-member" src="Members IMG/Guilherme-Panesi.jpeg" alt="">
+                        <div class="card-Member-name">
+                            Guilherme Panesi
+                        </div>
+                        <div class="cargo">
+                            Cargo: Membro do diretorio de robôtica
+                        </div>
+                        <div class="card-content">
+                            Eu sou Gabriel Panesi.
+                        </div>
+                        <div class="card-botton-member">
+                            <div class="special">
+                                Programação, Eletrônicam Calculo
                             </div>
                             <div class="link">
                                 <a href="">LinkIn</a>
