--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UFT-8">
     <meta name="viewport" content="width=device-width" , initial-scale="1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>IEEE</title>
 </head>
 
 <body>
@@ -202,7 +203,7 @@
                         </div>
                         <div class="card-botton-member">
                             <div class="special">
-                                Programação, Eletrônicam Calculo
+                                Programação, Eletrônica Calculo
                             </div>
                             <div class="link">
                                 <a href="">LinkIn</a>
@@ -213,7 +214,62 @@
         </div>
     </main>
     <footer class="footer">
-        <img class="img2" src="img4.jpeg" alt="">
+        <div class="container-footer">
+            <div class="row-footer">
+                <!--Footer-col-->
+                <div class="footer-col">
+                    <h4>Empresa</h4>
+                    <ul>
+                        <li><a href="#">Quem Somos</a></li>
+                        <li><a href="#">Quem Somos2</a></li>
+                        <li><a href="#">Quem Somos3</a></li>
+                        <li><a href="#">Quem Somos4</a></li>
+                    </ul>
+                </div>
+                <!--end footer col-->
+                <!--Footer-col-->
+                <div class="footer-col">
+                    <h4>Ajuda</h4>
+                    <ul>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">FAQ2</a></li>
+                        <li><a href="#">FAQ3</a></li>
+                        <li><a href="#">FAQ4</a></li>
+                    </ul>
+                </div>
+                <!--end footer col-->
+                <!--Footer-col-->
+                <div class="footer-col">
+                    <h4>Online</h4>
+                    <ul>
+                        <li><a href="#">Site</a></li>
+                        <li><a href="#">Site2</a></li>
+                        <li><a href="#">Site3</a></li>
+                        <li><a href="#">Site4</a></li>
+                    </ul>
+                </div>
+                <!--end footer col-->
+                <!--Footer-col-->
+                <div class="footer-col">
+                    <h4>Se Inscreva</h4>
+                    <!--form sub-->
+                    <div class="form-sub">
+                        <form>
+                            <input type="email" placeholder="Digite o seu e-mail" required>
+                            <button>Inscrever</button>
+                        </form>
+                    </div>
+                    <!--end form sub-->
+                    <div class="medias-sociais">
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="#"><i class="fa fa-youtube"></i></a>
+                        <a href="#"><i class="fa fa-linkedin"></i></a>
+                    </div>
+                </div>
+                <!--end footer col-->
+            </div>
+        </div>
     </footer>
 </body>
 </html>
