--- a/index.html
+++ b/index.html
@@ -58,28 +58,9 @@
                 <div class="Card-tittle">
                     Projetos
                 </div>
-                <ul class="cards">
-                    <li class="card">
-                        <img class="card-img" src="" alt="">
-                        <div class="card-tittle">
-                            SiteIEEE
-                        </div>
-                        <div class="card-content">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti minus accusamus officiis,
-                            rerum architecto deleniti neque facilis dolorum ullam aspernatur, nostrum esse commodi nulla
-                            earum, delectus nobis unde natus odit.
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi pariatur officia
-                            cupiditate enim natus iure exercitationem libero, laborum delectus ea consequatur, adipisci
-                            quia aspernatur eius dignissimos tenetur, in vitae non.
-                        </div>
-                        <div class="card-botton">
-                            <div class="link">
-                                <a href="">Link</a>
-                            </div>
-                            <div class="chave">HTML, CSS</div>
-                        </div>
-                    </li>
-                </ul>
+                <div class="cards-proj">
+                    <!-- JS. -->
+                </div>
             </div>
         </div>
         <div class="card-container" id="Eventos">
@@ -87,43 +68,8 @@
                 <div class="Card-tittle">
                     Eventos
                 </div>
-                <ul class="cards">
-                    <li class="card">
-                        <img class="card-img" src="" alt="">
-                        <div class="card-tittle">
-                            SECAI IX
-                        </div>
-                        <div class="card-content">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti minus accusamus officiis,
-                            rerum architecto deleniti neque facilis dolorum ullam aspernatur, nostrum esse commodi nulla
-                            earum, delectus nobis unde natus odit.
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi pariatur officia
-                            cupiditate enim natus iure exercitationem libero, laborum delectus ea consequatur, adipisci
-                            quia aspernatur eius dignissimos tenetur, in vitae non.
-                        </div>
-                        <div class="card-botton-style2">
-                            <div class="link">
-                                <a href="">Link</a>
-                            </div>
-                    </li>
-                    <li class="card">
-                        <img class="card-img" src="" alt="">
-                        <div class="card-tittle">
-                            SECAI IX
-                        </div>
-                        <div class="card-content">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti minus accusamus officiis,
-                            rerum architecto deleniti neque facilis dolorum ullam aspernatur, nostrum esse commodi nulla
-                            earum, delectus nobis unde natus odit.
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi pariatur officia
-                            cupiditate enim natus iure exercitationem libero, laborum delectus ea consequatur, adipisci
-                            quia aspernatur eius dignissimos tenetur, in vitae non.
-                        </div>
-                        <div class="card-botton-style2">
-                            <div class="link">
-                                <a href="">Link</a>
-                            </div>
-                    </li>
+                <ul class="cards-event">
+                    <!-- JS. -->
                 </ul>
             </div>
         </div>
@@ -133,82 +79,7 @@
                     Membros
                 </div>
                 <ul class="cards-member">
-                    <li class="card-member">
-                        <img class="card-img-member" src="https://pps.whatsapp.net/v/t61.24694-24/290810731_1020487415322592_2904842586930223407_n.jpg?ccb=11-4&oh=01_AVyId4xp64fdiiALovwsvK4kfUGyKKqUUIfFWK7XfOG7ug&oe=633CBCB7" alt="">
-                        <div class="card-Member-name">
-                            Marina Texeira
-                        </div>
-                        <div class="cargo">
-                            Cargo: Diretora do ramo
-                        </div>
-                        <div class="card-content">
-                            Cuidado com o Stike.
-                        </div>
-                        <div class="card-botton-member">
-                            <div class="special">
-                                Administração, Calculo
-                            </div>
-                            <div class="link">
-                                <a href="">LinkIn</a>
-                            </div>
-                    </li>
-                    <li class="card-member">
-                        <img class="card-img-member" src="https://pps.whatsapp.net/v/t61.24694-24/138534517_121184246446828_8095574896086887482_n.jpg?ccb=11-4&oh=01_AVyATcrKytokz4KC7_YLAclioTBjgmheM85whtMgBJevww&oe=63406B8F" alt="">
-                        <div class="card-Member-name">
-                            Klauss Marchi
-                        </div>
-                        <div class="cargo">
-                            Cargo: Vice-Diretor do ramo
-                        </div>
-                        <div class="card-content">
-                            Eu Amo Pyton.
-                        </div>
-                        <div class="card-botton-member">
-                            <div class="special">
-                                Pyton, Pyton
-                            </div>
-                            <div class="link">
-                                <a href="">LinkIn</a>
-                            </div>
-                    </li>
-                    <li class="card-member">
-                        <img class="card-img-member" src="https://pps.whatsapp.net/v/t61.24694-24/300557173_182183454272830_5035497876143889024_n.jpg?ccb=11-4&oh=01_AVxPBdwU-rzoqBMtgHjEN7DmPMwNP6uQUWmfRVm9_cOr3Q&oe=633FFB38" alt="">
-                        <div class="card-Member-name">
-                            Nicolas Grisostolo
-                        </div>
-                        <div class="cargo">
-                            Cargo: Diretor do diretorio de robôtica
-                        </div>
-                        <div class="card-content">
-                            Por favor me dê strike.
-                        </div>
-                        <div class="card-botton-member">
-                            <div class="special">
-                                Programação, Eletrônica
-                            </div>
-                            <div class="link">
-                                <a href="">LinkIn</a>
-                            </div>
-                    </li>
-                    <li class="card-member">
-                        <img class="card-img-member" src="Members IMG/Guilherme-Panesi.jpeg" alt="">
-                        <div class="card-Member-name">
-                            Guilherme Panesi
-                        </div>
-                        <div class="cargo">
-                            Cargo: Membro do diretorio de robôtica
-                        </div>
-                        <div class="card-content">
-                            Eu sou Gabriel Panesi.
-                        </div>
-                        <div class="card-botton-member">
-                            <div class="special">
-                                Programação, Eletrônica Calculo
-                            </div>
-                            <div class="link">
-                                <a href="">LinkIn</a>
-                            </div>
-                    </li>
+                    <!-- JS. -->
                 </ul>
             </div>
         </div>
@@ -271,5 +142,6 @@
             </div>
         </div>
     </footer>
+    <script src="./app.js"></script>
 </body>
 </html>
