--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <!--end footer col-->
                 <!--Footer-col-->
                 <div class="footer-col">
-                    <h4>Se Inscreva</h4>
+                    <h4>Contatos</h4>
                     <!--end form sub-->
                     <div class="medias-sociais">
                         <a href="#"><i class="fa fa-facebook"></i></a>
